[package]
name = "vga_buffer"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33     # (0x10 << 1) | 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
spin = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
qemu_test = { git = "https://github.com/FrederickWatkins/qemu_test_rust.git" }

[dev-dependencies]
bootloader = "0.9.x"